--- a/Battle_Shooter_Game/Battle_Shooter_Game.xaml
+++ b/Battle_Shooter_Game/Battle_Shooter_Game.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Final_Project_Roi"
         mc:Ignorable="d"
-          Icon="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\Iamge_Of_Battle_Shoter\player.png"
+        Icon="pack://application:,,,/Image_Of_Project/Image_Of_Battle_Shoter/player.png"
         Title="Battle_Shooter_Game" Height="615" Width="540">
-    
+
     <Canvas Name="MyCanvas" Focusable="True" Background="Black" KeyDown="OnKeyDown" KeyUp="OnKeyUp">
-       
-        <Rectangle Name="Player" Height="50 " Width="60 " Fill="Yellow" Canvas.Left="240" Canvas.Top="526" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Label Name="scoreText" Content="score: 0" FontSize="18" FontWeight="Bold" Foreground="White"/>
-        <Label Name="damageText" Content="score: 0" FontSize="18" FontWeight="Bold" Foreground="White" Canvas.Left="419"/>
+
+        <Rectangle Name="Player" Height="50" Width="60" Fill="Yellow" Canvas.Left="240" Canvas.Top="526" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Label Name="scoreText" Content="Score: 0" FontSize="18" FontWeight="Bold" Foreground="White"/>
+        <Label Name="damageText" Content="Damage: 0" FontSize="18" FontWeight="Bold" Foreground="White" Canvas.Left="419"/>
     </Canvas>
 </Window>
