--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     
         Title="Game Center" Height="600" Width="800"
-          Icon="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\Image_Bg\Picture_Backg.jpg"
+          Icon="pack://application:,,,/Image_Of_Project/Image_Bg/Picture_Backg.jpg"
       
         Background="#1A1A2E">
 
@@ -102,7 +102,7 @@
                             <Grid>
                                 <Border Background="MediumPurple" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\Iamge_Of_Battle_Shoter\SpaceShotter.png" Stretch="Fill" Margin="-2,0,-2,0"  />
+                                        <Image Source="pack://application:,,,/Image_Of_Project/Image_Of_Battle_Shoter/SpaceShotter.png" Stretch="Fill" Margin="-2,0,-2,0"  />
                                     </Border>
                                 </Border>
                             </Grid>
@@ -162,7 +162,7 @@
                             <Grid>
                                 <Border Background="SandyBrown" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\Image_X_or_O\Photo_Of_TicTacToeGame.png" Width="100" Height="100" Stretch="Fill" Margin="-5,-5,-5,-5"  />
+                                        <Image Source="pack://application:,,,/Image_Of_Project/Image_X_or_O/Photo_Of_TicTacToeGame.png" Width="100" Height="100" Stretch="Fill" Margin="-5,-5,-5,-5"  />
                                     </Border>
                                 </Border>
                             </Grid>
@@ -222,7 +222,7 @@
                             <Grid>
                                 <Border Background="White" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\Image_Calculetor\Calculetor_Image2.png" Stretch="Fill" Margin="-2,0,-2,0"  />
+                                        <Image Source="pack://application:,,,/Image_Of_Project/Image_Calculetor/Calculetor_Image2.png" Stretch="Fill" Margin="-2,0,-2,0"  />
                                     </Border>
                                 </Border>
                             </Grid>
@@ -282,7 +282,7 @@
                             <Grid>
                                 <Border Background="WhiteSmoke" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image  Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\SnakesandLadders\Snakes and Ladders.png" Stretch="Fill" Margin="-2,0,-2,0"  />
+                                        <Image  Source="pack://application:,,,/Image_Of_Project/SnakesandLadders/Snakes and Ladders.png" Stretch="Fill" Margin="-2,0,-2,0"  />
                                     </Border>
                                 </Border>
                             </Grid>
@@ -340,7 +340,7 @@
                             <Grid>
                                 <Border Background="SkyBlue" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image  Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\CountriesImage\Countries_Images2.jpg .png" Stretch="Fill" Margin="-2,0,-2,0"  />
+                                        <Image Source="pack://application:,,,/Image_Of_Project/CountriesImage/Countries_Images2.jpg .png" Stretch="Fill" Margin="-2,0,-2,0"  />
                                     </Border>
                                 </Border>
                             </Grid>
@@ -401,7 +401,7 @@
                             <Grid>
                                 <Border Background="LightPink" CornerRadius="20" Padding="5" Margin="0,10,0,-10">
                                     <Border  CornerRadius="15" ClipToBounds="True">
-                                        <Image Source="C:\Users\Owner\source\repos\project c#\Final_Project_Roi\Image_Of_Project\ToDoList\ToDoList_Image.png" Stretch="Fill" Margin="-3,0"  />
+                                        <Image Source="pack://application:,,,/Image_Of_Project/ToDoList/ToDoList_Image.png" Stretch="Fill" Margin="-3,0"  />
                                     </Border>
                                 </Border>
                             </Grid>
